--- a/index.html
+++ b/index.html
@@ -11,7 +11,36 @@
 </head>
 
 <body>
-    123
+    <!-- 头部区域 -->
+    <div class="header w">
+        <!-- logo部分模块 -->
+        <div class="logo"></div>
+        <!-- 导航栏模块 nav-->
+        <div class="nav">
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">课程</a></li>
+                <li><a href="#">职业规划</a></li>
+            </ul>
+        </div>
+        <!-- 搜索模块 -->
+        <div class="search">
+            <input type="text" name="" id="" value="输入关键字">
+            <button></button>
+        </div>
+        <!-- 用户模块 -->
+        <div class="user">
+            <img src="images/user.png" alt="">
+            qq-lilei
+
+        </div>
+        <!-- banner区域 -->
+        <div class="banner">
+            <!-- 版心 -->
+            <div class="w">
+                123
+            </div>
+        </div>
 </body>
 
 </html>
