--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- 头部区域 -->
-    <div class="header w">
+    <div class="header w clearfix">
         <!-- logo部分模块 -->
         <div class="logo"></div>
         <!-- 导航栏模块 nav-->
@@ -32,15 +32,207 @@
         <div class="user">
             <img src="images/user.png" alt="">
             qq-lilei
-
         </div>
-        <!-- banner区域 -->
-        <div class="banner">
-            <!-- 版心 -->
-            <div class="w">
-                123
+    </div>
+    <!-- 头部结束 -->
+    <!-- banner区域 -->
+    <div class="banner">
+        <!-- 版心 -->
+        <div class="w">
+            <!-- 下级导航栏 -->
+            <div class="subnav">
+                <ul>
+                    <li><a href="#">前端开发 <span>&gt;</span></a></li>
+                    <li><a href="#">后端开发 <span>&gt;</span></a></li>
+                    <li><a href="#">移动开发 <span>&gt;</span></a></li>
+                    <li><a href="#">人工智能 <span>&gt;</span></a></li>
+                    <li><a href="#">前端开发 <span>&gt;</span></a></li>
+                    <li><a href="#">前端开发 <span>&gt;</span></a></li>
+                    <li><a href="#">前端开发 <span>&gt;</span></a></li>
+                    <li><a href="#">前端开发 <span>&gt;</span></a></li>
+                    <li><a href="#">前端开发 <span>&gt;</span></a></li>
+                </ul>
+            </div>
+            <!-- 课程表模块 -->
+            <div class="course">
+                <h2>我的课程表</h2>
+                <div class="bd">
+                    <ul>
+                        <li>
+                            <h4>继续学习，程序语言设计</h4>
+                            <p>正在学习-使用对象</p>
+                        </li>
+                        <li>
+                            <h4>继续学习，程序语言设计</h4>
+                            <p>正在学习-使用对象</p>
+                        </li>
+                        <li>
+                            <h4>继续学习，程序语言设计</h4>
+                            <p>正在学习-使用对象</p>
+                        </li>
+                    </ul>
+                    <a class="more" href="#">全部课程</a>
+
+                </div>
             </div>
         </div>
+    </div>
+    <!-- 精品推荐开始 -->
+    <div class="goods w">
+        <h3>精品推荐</h3>
+        <ul class="goods-item">
+            <li><a href="#">jQuery</a></li>
+            <li><a href="#">jQuery</a></li>
+            <li><a href="#">jQuery</a></li>
+            <li><a href="#">jQuery</a></li>
+            <li><a href="#">jQuery</a></li>
+        </ul>
+        <a href="" class="mod">修改兴趣</a>
+    </div>
+    <!-- 精品推荐结束 -->
+
+    <!-- 核心内容区域开始 -->
+    <div class="box w">
+        <div class="box-hd">
+            <h3>精品推荐</h3>
+            <a href="#">查看全部</a>
+        </div>
+        <div class="box-bd">
+            <ul class="clearfix">
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+                <li>
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- 核心内容区域结束 -->
+    <!-- 页脚开始 -->
+    <div class="footer">
+        <div class="w">
+            <div class="copyright">
+                <img src="images/logo.png" alt="">
+                <p>学成在线网致力于普及中国最好的教育学成在线网致力于普及中国最好的教育 <br>
+                    学成在线网致力于普及中国最好的教育</p>
+                <a class="app" href="#">下载App</a>
+            </div>
+            <div class="links">
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd><a href=""> 关于</a></dd>
+                    <dd><a href=""> 管理团队</a></dd>
+                    <dd><a href=""> 工作机会</a></dd>
+                    <dd><a href=""> 客户服务</a></dd>
+                    <dd><a href=""> 帮助</a></dd>
+                </dl>
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd><a href=""> 关于</a></dd>
+                    <dd><a href=""> 管理团队</a></dd>
+                    <dd><a href=""> 工作机会</a></dd>
+                    <dd><a href=""> 客户服务</a></dd>
+                    <dd><a href=""> 帮助</a></dd>
+                </dl>
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd><a href=""> 关于</a></dd>
+                    <dd><a href=""> 管理团队</a></dd>
+                    <dd><a href=""> 工作机会</a></dd>
+                    <dd><a href=""> 客户服务</a></dd>
+                    <dd><a href=""> 帮助</a></dd>
+                </dl>
+            </div>
+
+
+        </div>
+    </div>
+    <!-- 页脚结束 -->
 </body>
 
 </html>
