--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
         <div class="box-bd">
             <ul class="clearfix">
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -109,6 +112,23 @@
                     </div>
                 </li>
                 <li>
+
+                    <img src="images/pic.png" alt="">
+                    <h4>
+                        Think PHP 5.0 博客系统实战项目演练
+                    </h4>
+                    <div class="info">
+                        <span>高级</span> * 1125人正在学习
+                    </div>
+                    <!-- 绝对定位，能自由移动，放哪里都可以， -->
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
+                </li>
+                <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -118,6 +138,9 @@
                     </div>
                 </li>
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -127,6 +150,9 @@
                     </div>
                 </li>
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -136,6 +162,9 @@
                     </div>
                 </li>
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -145,6 +174,9 @@
                     </div>
                 </li>
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -154,6 +186,9 @@
                     </div>
                 </li>
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -163,6 +198,9 @@
                     </div>
                 </li>
                 <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
@@ -172,15 +210,9 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/pic.png" alt="">
-                    <h4>
-                        Think PHP 5.0 博客系统实战项目演练
-                    </h4>
-                    <div class="info">
-                        <span>高级</span> * 1125人正在学习
-                    </div>
-                </li>
-                <li>
+                    <em>
+                        <img src="images/hot.png" alt="">
+                    </em>
                     <img src="images/pic.png" alt="">
                     <h4>
                         Think PHP 5.0 博客系统实战项目演练
